# flutter_angle

./: .gitignore  README.md  flutter_angle_crash_fix.patch  h_fix.patch  pubspec.yaml
.dart_tool/: package_config.json
.github/workflows/: flutter.yml
assets/: gles_bindings.js
darwin/: flutter_angle.podspec
darwin/Classes/: FlutterAngle.h  FlutterAnglePlugin.swift  MTLRenderer.swift  OpenGLRenderer.swift  OpenGlRenderer2.swift
example/: README.md
example/lib/: main.dart  main_old1.dart  main_old2.dart  pyramid.dart  renderable.dart
flutter_angle/: .gitignore  CHANGELOG.md  README.md  analysis_options.yaml  egl_bindings_fixes.txt  ffigen.yaml  ffigen_egl.yaml  ffigen_gles.yaml  gles_bindings_manual_fixes.txt  pubspec.yaml
flutter_angle/android/: build.gradle
flutter_angle/android/src/main/cpp/: CMakeLists.txt  angle_android_graphic_jni.cpp
flutter_angle/darwin/: flutter_angle.podspec
flutter_angle/darwin/Classes/: FlutterAngleOSPlugin.swift  FlutterAnglePlugin.swift  FlutterAngleSimPlugin.swift
flutter_angle/darwin/flutter_angle/: Package.swift
flutter_angle/example/: .gitignore  pubspec.yaml
flutter_angle/example/assets/: gles_bindings.js
flutter_angle/example/ios/: Podfile  flutterAngle.podspec
flutter_angle/example/lib/: cube.dart  gl_program.dart  learn_gl.dart  lesson1.dart  lesson2.dart  lesson3.dart  main.dart  main_old1.dart  main_old2.dart  pyramid.dart
flutter_angle/example/macos/: Podfile  flutterAngle.podspec  libc++_chrome.dylib  libdawn_proc.dylib
flutter_angle/lib/: flutter_angle.dart
flutter_angle/lib/desktop/: angle.dart  index.dart  lib_egl.dart  wrapper.dart
flutter_angle/lib/native-array/: base_native_array.dart  index.dart  native_array_app.dart  native_array_web.dart
flutter_angle/lib/shared/: classes.dart  console.dart  gl_program.dart  options.dart  render_worker.dart  webgl.dart
flutter_angle/lib/webgl/: angle.dart  gles_bindings.dart  gles_bindings_wasm.dart  index.dart  webgl2_extensions.dart  wrapper.dart  wrapper_wasm.dart
flutter_angle/linux/: CMakeLists.txt  fl_angle_texture.cc  fl_angle_texture_gl.cc  flutter_angle_plugin.cc  opengl_renderer.cc
flutter_angle/linux/include/: fl_angle_gl.h  fl_angle_texture.h  fl_angle_texture_gl.h  opengl_renderer.h
flutter_angle/linux_v1/: CMakeLists.txt  fl_angle_texture_gl.cc  flutter_angle_plugin.cc  opengl_renderer.cc
flutter_angle/linux_v1/include/: fl_angle_texture_gl.h  opengl_renderer.h
flutter_angle/linux_v1/include/flutter_angle/: flutter_angle_plugin.h
flutter_angle/windows/: CMakeLists.txt  flutter_angle_plugin.cpp  flutter_gl_texture.cpp  opengl_exception.cpp
flutter_angle/windows/include/: egl.h
flutter_angle_darwin/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
flutter_angle_darwin/darwin/: flutter_angle_darwin.podspec
flutter_angle_darwin/darwin/Classes/: FlutteAngleSimPlugin.swift  FlutterAngleOSPlugin.swift  FlutterAnglePlugin.h  FlutterAnglePlugin.m  FlutterAnglePlugin.swift
flutter_angle_darwin/darwin/Classes Future/: FlutterAngleOSPlugin.swift  FlutterAnglePlugin.swift
flutter_angle_darwin/darwin/flutter_angle_darwin/: Package.swift
flutter_angle_darwin/darwin/libEGL.xcframework/: Info.plist
flutter_angle_darwin/darwin/libGLESv2.xcframework/: Info.plist
flutter_angle_darwin/darwin/readme/: FlutterAnglePlugin.swift  build_xcframework.sh
flutter_angle_darwin/ios/Classes/: FlutterAnglePlugin.h  FlutterAnglePlugin.m
flutter_angle_darwin/ios/MetalANGLE.xcframework/: Info.plist
flutter_angle_darwin/macos/: flutter_angle_darwin.podspec
flutter_angle_darwin/macos/readme/: build.sh  readme.txt
flutter_angle_linux/: LICENSE  README.md  pubspec.yaml
flutter_angle_linux/linux/: CMakeLists.txt  flutter_angle_linux_plugin.cc  flutter_angle_linux_plugin_private.h  flutter_angle_plugin.cc  flutter_angle_plugin_private.h  flutter_texture_gl.cc
flutter_angle_linux/linux/include/: flutter_texture_gl.h
flutter_angle_linux/linux/include/flutter_angle/: flutter_angle_plugin.h
flutter_angle_linux/linux/include/flutter_angle_linux/: flutter_angle_linux_plugin.h
flutter_angle_linux/test/: egl_info.cc  egl_info.h
flutter_angle_native_array/: README.md  pubspec.yaml
flutter_angle_native_array/lib/: base_native_array.dart  flutter_angle_native_array.dart  native_array.dart  native_array_app.dart  native_array_web.dart
flutter_angle_platform_interface/: README.md  pubspec.yaml
flutter_angle_platform_interface/lib/: flutter_angle_platform_interface.dart  method_channel.dart
flutter_angle_platform_interface/lib/shared/: array.dart
flutter_angle_web/: CHANGELOG.md  pubspec.yaml
flutter_angle_web/example/: pubspec.yaml
flutter_angle_web/example/lib/: learn_gl.dart  lesson1.dart  lesson3.dart  main.dart  main_old.dart  main_old2.dart
flutter_angle_web/lib/: flutter_angle_web.dart
flutter_angle_web/lib/native-array/: index.dart  native_array_web.dart
flutter_angle_web/lib/shared/: options.dart
flutter_angle_web/lib/webgl/: angle.dart  gles_bindings.dart  index.dart  wrapper.dart
flutter_angle_windows/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
flutter_angle_windows/windows/: CMakeLists.txt  flutter_angle_plugin.cpp  flutter_angle_windows_plugin.cpp  flutter_gl_texture.cpp  opengl_exception.cpp
flutter_angle_windows/windows/include/flutter_angle_windows/: flutter_angle_windows_plugin.h
flutter_angle_windows/windows/include/headers/: flutter_gl_texture.h  opengl_exception.h
ios/Classes/: FlutterAnglePlugin.h  FlutterAnglePlugin.m
lib/desktop/: angle.dart  gl_program.dart  render_worker.dart  wrapper.dart
lib/desktop/bindings/: egl_bindings.dart  gles_bindings.dart
lib/native-array/: NativeArray.app.dart  base-native-array.dart  index.dart  native_array.dart
lib/shared/: console.dart  options.dart  webgl.dart
lib/webgl/: angle.dart  wrapper.dart
macos/Classes/: FlutterAnglePlugin.h  FlutterAnglePlugin.m
temp/: CHANGELOG.md  README.md
temp/darwin/: flutter_angle_darwin.podspec
temp/darwin/Assets/: FlutterAngle.h  FlutterAngle.m  (+1 more)
windows/: flutter_angle_plugin.cpp
(+762 files in other folders)
